--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="libs/jquery-3.3.1.js"></script>
-  <script src="libs/Greetr.js"></script>
-  <script src="app.js"></script>
+  <script src="scripts/libs/jquery-3.3.1.js"></script>
+  <script src="scripts/libs/Greetr.js"></script>
+  <script src="scripts/app.js"></script>
 </body>
 </html>
