--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="logindiv">
+    <select name="" id="lang">
+      <option value="en">English</option>
+      <option value="es">Spanish</option>
+    </select>
+    <input type="button" value="Login" id="login" />
+  </div>
+  <h1 id="greeting"></h1>
   <script src="scripts/libs/jquery-3.3.1.js"></script>
   <script src="scripts/libs/Greetr.js"></script>
   <script src="scripts/app.js"></script>
