Added Dom interaction functionality with dropdown, added support for French lang

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
   <div id="logindiv">
-    <select name="" id="lang">
+    <select id="lang">
       <option value="en">English</option>
       <option value="es">Spanish</option>
+      <option value="fr">French</option>
     </select>
     <input type="button" value="Login" id="login" />
   </div>
